--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Github User Searcher</string>
+    <string name="search_hint">Search Github user</string>"
 </resources>
