--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">Github User Searcher</string>
     <string name="search_hint">Search Github user</string>"
+    <string name="user_detail_name">Name: %s</string>
+    <string name="user_detail_location">Location: %s</string>
+    <string name="user_detail_bio">Bio: %s</string>
+    <string name="follower">Followers</string>
+    <string name="following">Following</string>
+    <string name="repository">Repository</string>
 </resources>
