room database structure created

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="follower">Followers</string>
     <string name="following">Following</string>
     <string name="repository">Repository</string>
+    <string name="favorites">Favorites</string>
+    <string name="user_detail">User Detail</string>
 </resources>
