--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="repository">Repository</string>
     <string name="favorites">Favorites</string>
     <string name="user_detail">User Detail</string>
+    <string name="favorite_date">Date added to favorites: %s</string>
 </resources>
