toolbar added to users page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="repository">Repository</string>
     <string name="favorites">Favorites</string>
     <string name="user_detail">User Detail</string>
+    <string name="user_list">Users</string>
     <string name="favorite_date">Date added to favorites: %s</string>
     <string name="no_data_desc">There is no person that marked as a favorite!</string>
     <string name="error_msg">Something went wrong!</string>
